Removed jQuery usage, fixed page transition, fixed menu
Removed jQuery mobile usage due to error when transitioning to pages
(animation error for fixed navbar).
Used HTML5 and CSS3:target instead -> Slower initial load time, but
faster transitions between screens. (Can add spinning wheel to not let
users hang)
Menu buttons now change colors when clicked
!!Issues with iOS scrollbar (still appears)

--- a/iNRIC/www/css/index.css
+++ b/iNRIC/www/css/index.css
@@ -68,7 +68,9 @@ body {
                                       /* offset horizontal: half of image width and text area width */
     }
 }
-
+::-webkit-scrollbar { 
+    display: none; 
+}
 h1 {
     font-size:24px;
     font-weight:normal;
@@ -78,12 +80,14 @@ h1 {
     text-align:center;
 }
 
-
+header{
+    z-index:9999;
+}
 .logoheader{
     
     height:80px;
     width:100%;
-    position:absolute;
+    position:fixed;
     background-color: #EEEEEE;
 
 }
@@ -97,17 +101,12 @@ h1 {
     height:60px;
     width:200px;
 }
-.menu
-{
-    width:100%;
-}
-.home
-{
-    height:100%;
-    width:100%;
+.main{
+    
 }
 nav {
-    position:absolute;
+    z-index:9999;
+    position:fixed;
     bottom:0;
     margin:0;
     width:100%;
@@ -140,14 +139,24 @@ ul
 {
     text-align:center;
 }
-#home .ui-link{
-    color:black;
-}
+
 nav > ul > li > a {
-    color: #EEEEEE; !important
+    color: black;
     background-color:#EEEEEE;
     display: block;
     line-height: 4.5em;
     padding: 0.5em 0.5em;
     text-decoration: none;
+}
+.section:not(:target) {
+    position: relative;
+    display:none;
+    top:80px;
+}
+.section:target{
+    position:relative;
+    top:80px;
+}
+.active{
+    color:red;
 }
